# C_HWs

./: CMakeLists.txt  main.c
HW1/: Diamond_resutls.txt  diamond.c  diamond.h  emptyDiamond.c  emptyDiamond.h  emptyDiamond_results.txt  main.c  minmax.c  minmax.h  minmax_results.txt
HW2/: calendar.c  calendar.h  calendar_results.txt  main.c  primes.c  primes.h  primes_result.txt
HW3/: hanoi.c  hanoi.h  hanoi_results.txt  jeep.c  jeep.h  jeep_results.txt  powers.c  powers.h  powers_result.txt
HW4/: Sorting_Results.txt  int-array-stuff.c  int-array-stuff.h  random-stuff.c  random-stuff.h  sort.c  sort.h  sorting-routines.c  sorting-routines.h
HW5/: josephus_functions.c  josephus_functions.h  josephus_main.c  josephus_main.h  josephus_results.txt
HW6/: list_of_presidents.txt  presidents_results.txt  sort-presidents.c  sort-presidents.h
